--- a/app/src/main/res/layout/row_item_movie.xml
+++ b/app/src/main/res/layout/row_item_movie.xml
@@ -25,6 +25,7 @@
             android:layout_weight="0.2">
 
             <ImageView
+                android:id="@+id/iv_thumbnails"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
