--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,11 @@
     xmlns:cardView="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_vertical_margin"
-    tools:ignore="Autofill"
-    android:orientation="vertical">
+    android:paddingStart="@dimen/margin_10dp"
+    android:paddingTop="@dimen/margin_10dp"
+    android:paddingEnd="@dimen/margin_10dp"
+    android:orientation="vertical"
+    android:focusableInTouchMode="true">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -35,14 +37,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_5dp"
-        android:layout_marginBottom="@dimen/margin_5dp"/>
+        android:layout_marginBottom="@dimen/margin_5dp"
+        android:indeterminate="true"
+        android:visibility="gone"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_movies"
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/margin_5dp"
-        android:layout_marginBottom="@dimen/margin_10dp"/>
+        android:layout_marginTop="@dimen/margin_5dp">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_movies"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/row_item_movie"
+            android:paddingBottom="@dimen/margin_10dp"/>
+
+        <TextView
+            android:id="@+id/tv_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/no_data_text"
+            android:textColor="@android:color/black"
+            tools:text="Tidak ada data"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
+
 
 
 </LinearLayout>
