--- a/app/src/main/res/layout/row_item_movie.xml
+++ b/app/src/main/res/layout/row_item_movie.xml
@@ -5,13 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_10dp"
+    android:layout_marginTop="@dimen/margin_10dp"
     cardView:cardElevation="2dp"
     cardView:contentPadding="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:orientation="horizontal"
         android:weightSum="1"
         android:baselineAligned="false">
@@ -22,13 +22,13 @@
             android:layout_height="match_parent"
             android:paddingStart="@dimen/margin_5dp"
             android:paddingEnd="0dp"
-            android:layout_weight="0.2">
+            android:layout_weight="0.3">
 
             <ImageView
                 android:id="@+id/iv_thumbnails"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="true"
+                android:layout_centerInParent="true"
                 android:scaleType="fitXY"
                 android:contentDescription="@null"
                 tools:src="@android:color/darker_gray"/>
@@ -39,7 +39,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.8"
+            android:layout_weight="0.7"
             android:orientation="vertical"
             android:padding="@dimen/margin_10dp">
 
@@ -49,6 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Title Movie"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"/>
 
@@ -59,6 +61,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_5dp"
                 android:textSize="12sp"
+                android:maxLines="3"
+                android:ellipsize="end"
                 android:textColor="@android:color/black"
                 tools:text="@string/dummy_description" />
 
