--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="green">#0b8f84</color>
 
-    <color name="grey">#0b8f84</color>
+    <color name="grey">#b3b3b3</color>
 </resources>
