--- a/app/src/main/res/layout/activity_detail_movies.xml
+++ b/app/src/main/res/layout/activity_detail_movies.xml
@@ -6,8 +6,10 @@
     android:layout_height="wrap_content">
 
     <ScrollView
+        android:id="@+id/sv_wrapper"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="visible">
 
         <!-- Global Wrapper -->
         <LinearLayout
@@ -49,7 +51,7 @@
                     android:textColor="@android:color/black"
                     android:textSize="12sp"
                     android:textStyle="normal"
-                    tools:text="@string/dummy_description" />
+                    tools:text="@string/description_placeholder" />
 
                 <!-- Rating, Duration, Language Wrapper -->
                 <LinearLayout
@@ -70,8 +72,9 @@
 
                         <TextView
                             android:id="@+id/tv_rating"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textAlignment="center"
                             android:textColor="#d40000"
                             android:textSize="30sp"
                             tools:text="7.0" />
@@ -81,7 +84,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
                             android:textSize="12sp"
-                            tools:text="@string/rating" />
+                            android:text="@string/rating" />
 
                     </LinearLayout>
 
@@ -102,9 +105,10 @@
 
                         <TextView
                             android:id="@+id/tv_duration"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="#d40000"
+                            android:textAlignment="center"
                             android:textSize="30sp"
                             tools:text="121" />
 
@@ -113,7 +117,7 @@
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
                             android:textSize="12sp"
-                            tools:text="@string/duration" />
+                            android:text="@string/duration" />
 
 
                     </LinearLayout>
@@ -135,18 +139,19 @@
 
                         <TextView
                             android:id="@+id/tv_language"
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="#d40000"
+                            android:textAlignment="center"
                             android:textSize="30sp"
-                            tools:text="EN" />
+                            tools:text="@string/language_placeholder" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textColor="@android:color/black"
                             android:textSize="12sp"
-                            tools:text="@string/language" />
+                            android:text="@string/language" />
 
 
                     </LinearLayout>
@@ -162,8 +167,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:paddingTop="@dimen/margin_5dp"
                 android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="0dp"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
                 android:visibility="visible">
 
                 <TextView
@@ -171,13 +177,27 @@
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    tools:text="Genres" />
+                    android:text="@string/genres" />
 
                 <!-- Content -->
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_genre"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_genre"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/tv_no_genre"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/no_genres"
+                        android:textColor="@android:color/black"
+                        android:textSize="12sp"
+                        android:visibility="gone"/>
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -185,17 +205,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:paddingTop="@dimen/margin_10dp"
                 android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="0dp"
-                android:paddingBottom="@dimen/margin_10dp">
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/margin_10dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    tools:text="Relese" />
+                    android:text="@string/release" />
 
                 <TextView
                     android:id="@+id/tv_release"
@@ -214,17 +235,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:paddingTop="@dimen/margin_10dp"
                 android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="0dp"
-                android:paddingBottom="@dimen/margin_10dp">
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingBottom="@dimen/margin_10dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    tools:text="Overview" />
+                    android:text="@string/overview" />
 
                 <TextView
                     android:id="@+id/tv_overview"
@@ -233,7 +255,7 @@
                     android:paddingTop="@dimen/margin_5dp"
                     android:textSize="16sp"
                     android:textStyle="normal"
-                    tools:text="@string/dummy_description" />
+                    tools:text="@string/description_placeholder" />
 
             </LinearLayout>
 
