--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,21 +14,43 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         cardView:cardBackgroundColor="@android:color/white"
-        cardView:cardElevation="2dp"
-        cardView:cardCornerRadius="10dp"
-        cardView:contentPadding="10dp">
+        cardView:cardCornerRadius="8dp"
+        cardView:contentPadding="@dimen/margin_10dp">
 
-        <EditText
-            android:id="@+id/edt_search"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/movie_title_hint"
-            android:inputType="text"
-            android:textSize="12sp"
-            android:textStyle="normal"
-            android:textAllCaps="false"
-            android:background="@null"
-            android:padding="@dimen/margin_5dp"/>
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <EditText
+                android:id="@+id/edt_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/movie_title_hint"
+                android:inputType="textFilter"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@+id/btn_search"
+                android:textSize="12sp"
+                android:maxLines="1"
+                android:textStyle="normal"
+                android:textAllCaps="false"
+                android:background="@null"
+                android:padding="@dimen/margin_5dp"
+                tools:ignore="Autofill" />
+
+            <Button
+                android:id="@+id/btn_search"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:background="@drawable/btn_pink_selector"
+                android:text="@string/search"
+                android:textAllCaps="true"
+                android:textColor="@android:color/white"
+                android:layout_alignParentEnd="true"/>
+
+        </RelativeLayout>
+
 
     </android.support.v7.widget.CardView>
 
@@ -59,8 +81,9 @@
             android:layout_height="wrap_content"
             android:text="@string/no_data_text"
             android:textColor="@android:color/black"
-            tools:text="Tidak ada data"
-            android:layout_centerInParent="true"/>
+            tools:text="@string/no_data_text"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
 
     </RelativeLayout>
 
