--- a/app/src/main/res/layout/row_item_genre.xml
+++ b/app/src/main/res/layout/row_item_genre.xml
@@ -2,6 +2,7 @@
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tv_genre"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_grey_rad_5dp"
