--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="green">#0b8f84</color>
+    <color name="colorAccentDark">#b71550</color>
 
+    <color name="green">#0b8f84</color>
     <color name="grey">#b3b3b3</color>
 </resources>
