--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:cardView="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical"
     android:paddingStart="@dimen/margin_10dp"
     android:paddingTop="@dimen/margin_10dp"
-    android:paddingEnd="@dimen/margin_10dp"
-    android:orientation="vertical"
-    android:focusableInTouchMode="true">
+    android:paddingEnd="@dimen/margin_10dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -20,34 +20,34 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/edt_search"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/movie_title_hint"
-                android:inputType="textFilter"
                 android:layout_centerVertical="true"
                 android:layout_toStartOf="@+id/btn_search"
-                android:textSize="12sp"
-                android:maxLines="1"
-                android:textStyle="normal"
-                android:textAllCaps="false"
                 android:background="@null"
+                android:hint="@string/movie_title_hint"
+                android:inputType="textFilter"
+                android:maxLines="1"
                 android:padding="@dimen/margin_5dp"
+                android:textAllCaps="false"
+                android:textSize="12sp"
+                android:textStyle="normal"
                 tools:ignore="Autofill" />
 
             <Button
                 android:id="@+id/btn_search"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
+                android:layout_alignParentEnd="true"
                 android:background="@drawable/btn_pink_selector"
                 android:text="@string/search"
                 android:textAllCaps="true"
-                android:textColor="@android:color/white"
-                android:layout_alignParentEnd="true"/>
+                android:textColor="@android:color/white" />
 
         </RelativeLayout>
 
@@ -61,7 +61,7 @@
         android:layout_marginTop="@dimen/margin_5dp"
         android:layout_marginBottom="@dimen/margin_5dp"
         android:indeterminate="true"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -72,21 +72,20 @@
             android:id="@+id/rv_movies"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/row_item_movie"
-            android:paddingBottom="@dimen/margin_10dp"/>
+            android:paddingBottom="@dimen/margin_10dp"
+            tools:listitem="@layout/row_item_movie" />
 
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="@string/no_data_text"
             android:textColor="@android:color/black"
-            tools:text="@string/no_data_text"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            tools:text="@string/no_data_text" />
 
     </RelativeLayout>
-
 
 
 </LinearLayout>
