--- a/app/src/main/res/layout/row_item_movie.xml
+++ b/app/src/main/res/layout/row_item_movie.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardView="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,26 +11,26 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:baselineAligned="false"
         android:orientation="horizontal"
-        android:weightSum="1"
-        android:baselineAligned="false">
+        android:weightSum="1">
 
         <!-- Image Wrapper -->
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="0.3"
             android:paddingStart="@dimen/margin_5dp"
-            android:paddingEnd="0dp"
-            android:layout_weight="0.3">
+            android:paddingEnd="0dp">
 
             <ImageView
                 android:id="@+id/iv_thumbnails"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:scaleType="fitXY"
                 android:contentDescription="@null"
-                tools:src="@android:color/darker_gray"/>
+                android:scaleType="fitXY"
+                tools:src="@android:color/darker_gray" />
 
         </RelativeLayout>
 
@@ -48,11 +47,11 @@
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Title Movie"
-                android:maxLines="1"
                 android:ellipsize="end"
+                android:maxLines="1"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"/>
+                android:textSize="16sp"
+                tools:text="Title Movie" />
 
             <!-- Description -->
             <TextView
@@ -60,10 +59,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_5dp"
-                android:textSize="12sp"
-                android:maxLines="3"
                 android:ellipsize="end"
+                android:maxLines="3"
                 android:textColor="@android:color/black"
+                android:textSize="12sp"
                 tools:text="@string/description_placeholder" />
 
         </LinearLayout>
