--- a/app/src/main/res/layout/row_item_movie.xml
+++ b/app/src/main/res/layout/row_item_movie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/margin_10dp"
+    android:layout_marginBottom="@dimen/margin_10dp"
     cardView:cardElevation="2dp"
     cardView:contentPadding="0dp">
 
