Refactor Clean Code Submission 2

--- a/app/src/main/res/layout/top_toolbar.xml
+++ b/app/src/main/res/layout/top_toolbar.xml
@@ -8,4 +8,5 @@
     android:background="?attr/colorPrimary"
     tools:title="Title Toolbar"
     app:titleTextColor="@android:color/white"
-    app:theme="@style/ToolbarTheme"/>
+    app:theme="@style/ToolbarTheme"
+    tools:ignore="Overdraw" />
