--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -3,8 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_setting_language"
         android:icon="@drawable/ic_settings_language"
-        android:title="@string/title_bar_setting_laguage"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:title="">
+        <menu>
+            <item
+                android:id="@+id/action_setting_general"
+                android:title="@string/title_bar_setting" />
+            <item
+                android:id="@+id/action_setting_language"
+                android:title="@string/title_bar_setting_laguage" />
+        </menu>
+    </item>
 </menu>
